--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap"
       rel="stylesheet"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -29,6 +32,7 @@
   </head>
   <body>
     <div class="sidebar">
+      <i class="fa-solid fa-trash btn--trash"></i>
       <img src="logo.png" alt="Logo" class="logo" />
 
       <ul class="workouts">
